--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 
     <head>
         
-        <p>hello</p>
+        <meta charset="utf-8">
+
+        <title>Emese Peter Media</title>
+
+        <meta name="description" content="Emese Peter's Portfolio" />
+
+        <link rel="stylesheet" href="styles.css" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
     </head>
 
